...
    <string name="clear_history_label">Clear history</string>
    <string name="clear_playback_history_msg">This will clear the entire playback history. Are you sure you want to proceed?</string>
    <string name="remove_history_label">Remove from history</string>
    <string name="removed_history_label">Removed from history</string>

    <!-- Other -->
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="reset">Reset</string>
...
    <string name="unknown_media_key">AntennaPod - Unknown media key: %1$d</string>
    <string name="error_file_not_found">File not found</string>
    <string name="no_media_label">Item does not contain a media file</string>
    <string name="no_following_in_queue">This was the last episode in the queue</string>

    <!-- Queue operations -->
    <string name="lock_queue">Lock queue</string>
    <string name="queue_locked">Queue locked</string>
    <string name="queue_unlocked">Queue unlocked</string>
    <string name="queue_lock_warning">If you lock the queue, you can no longer reorder episodes.</string>
    <string name="checkbox_do_not_show_again">Do not show again</string>
    <string name="clear_queue_label">Clear queue</string>
    <string name="new_queue_label">New queue</string>
    <string name="rename_queue_label">Rename queue</string>
    <string name="delete_queue_label">Delete queue</string>
    <string name="delete_queue_confirmation">Please confirm that you want to delete the queue \"%1$s\". Its episodes will be removed from the queue.</string>
    <string name="queue_name_label">Queue name</string>
    <string name="queue_name_empty">Name cannot be empty</string>
    <string name="feed_queue_title">Queue for new episodes</string>
    <string name="feed_queue_active">Active queue</string>
    <string name="undo">Undo</string>
    <string name="move_to_top_label">Move to top</string>
    <plurals name="move_to_top_message">
        <item quantity="one">%d episode moved to top.</item>
...
    </plurals>
    <string name="move_to_bottom_label">Move to bottom</string>
    <plurals name="move_to_bottom_message">
        <item quantity="one">%d episode moved to bottom.</item>
        <item quantity="other">%d episodes moved to bottom.</item>
    </plurals>
    <string name="sort">Sort</string>
    <string name="keep_sorted">Keep sorted</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="episode">Episode</string>
    <string name="episode_title">Episode title</string>
    <string name="feed">Podcast</string>
    <string name="feed_title">Podcast title</string>
    <string name="random">Random</string>
    <string name="smart_shuffle">Smart shuffle</string>
    <string name="size">Size</string>
    <string name="clear_queue_confirmation_msg">Please confirm that you want to remove ALL episodes from the queue.</string>
    <string name="queue_time_left_label">%1$s • %2$s left</string>

    <!--  Variable Speed -->
...
